<resources>
    <string name="app_name">My Application</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="type_your_email">Type Your Email</string>
    <string name="sign_up">Sign Up</string>
    <string name="type_your_pass">Type Your Password</string>
    <string name="retype_your_pass">Retype Your Password</string>
    <string name="already_registered">Already Registered?</string>
    <string name="sign_in">Sign In</string>
    <string name="not_registered">Not Registered?</string>
    <string name="type_your_task">Type your task</string>
    <string name="log_out">Log out</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="title_activity_maps2">MapsActivity2</string>
</resources>